--- a/cource.html
+++ b/cource.html
@@ -202,7 +202,7 @@
 
         <div class="last">
             <center>
-            <p>All Rights Reserved &copy 2023</p></center>
+            <p>All Rights Reserved &copy 2023 fully develop and designed by Dinesh Kumar(2211093) ICD-CDE-22 SLIET</p></center>
         </div>
 
     </footer>
